# devman-bot

./: README.md  main.py  pyproject.toml  requirements.txt
app/: log_handlers.py  router.py  service.py  settings.py
