[project]
name = "devman-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.18.0",
    "aiohttp>=3.11.13",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "blue>=0.9.1",
    "isort>=6.0.1",
]

[tool.blue]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 9